画像のパスを変更

--- a/05.要素の並びやサイズを設定しよう/index.html
+++ b/05.要素の並びやサイズを設定しよう/index.html
@@ -12,6 +12,6 @@
   <p class="weather">晴れ</p>
   <p class="temperature">32℃</p>
   <p class="humidity">58%</p>
-  <img src="images/weather.png" alt="sunny" />
+  <img src="https://github.com/user-attachments/assets/161798ce-7d8a-40ee-8e86-48765ae029a3" alt="sunny" />
 </body>
 </html>
